# CadGoose

./: .gitignore  AGENTS.md  ARCHITECTURE_OPPORTUNITIES.md  CHANGELOG.md  CMakeLists.txt  CTestTestfile.cmake  CadGoose.sln  CadGooseTests  Makefile  PLAN.md  README.md  app.icns  autumn.cs  build.sh  build_legacy.sh  cmake_install.cmake  compile_commands.json  config.ini  output_test.toml  refactor_ai.py  refactor_behavior.py  refactor_goose.py  refactor_item_window.py  refactor_linux_ui.py  run.sh  sort_registry.py  test_config.toml  test_hit  test_hit.mm
.github/workflows/: build_and_release.yml  pr_check.yml
Assets/: Assets  prompts.toml
Extractor/: Program.cs
Launch_CadGoose_2026-05-14_10.21.00_C0372505.trace/Trace1.run/: RunIssues.storedata
build_asan/: FoundationLLM.swiftdoc  FoundationLLM.swiftmodule  FoundationLLM.swiftsourceinfo
config/: config.toml
config/TextMemes/: 1778769922_-1195529549_576f8e21.txt  1778781060_932200056_46d0b84f.txt  1778785884_1562503884_28fb358f.txt  1778785898_916007213_47d0761c.txt  1778785902_-1240646062_574aa936.txt  1778785995_-253624230_15146e5b.txt  1778789954_-1118945990_64001d63.txt  1778792192_-2030412499_ad7ac840.txt  1778792197_-380002587_ce91aa2d.txt  1778793571_-1539374685_bfbecfc6.txt  1778793634_502413544_385dcfdf.txt  1778793644_1354529917_63230a30.txt  1778793655_1828832656_d8aa0c02.txt  1778793667_988039010_99b80143.txt  1778794402_1184692747_bdc581d9.txt  1778794403_1611285183_c267af24.txt  1778794407_-704573304_e6b61fa0.txt  1778794410_830761546_8d7dfb8b.txt  1778794413_-2037703677_87acac8b.txt  1778794423_-1972200253_3af2d131.txt  1778794481_-218213171_1ee19b64.txt  1778794489_1677202065_6fea7212.txt  1778796219_1977532997_f1ea1f02.txt  1778796498_-164188695_4b1f6884.txt  1778796523_-819885163_5d06e04f.txt  1778852839_1152665771_f832c319.txt  1778858309_522880480_bb732a0a.txt  1778858314_2027894277_88947ef1.txt  1778858371_177693700_c37cda09.txt  1778858376_2087669506_d86fb131.txt  1778858462_367381857_6aeac016.txt  1778865343_991060700_4caaa15f.txt  1778865351_-93303667_601fed10.txt  1778867062_1444944185_89006c4a.txt  1778867066_-493212043_1bcb4917.txt  1778867188_629729828_eb07653f.txt  1778867194_-232490635_4bed96d0.txt  1778867221_-287930958_2934c1a6.txt  1778867233_1658419441_247e0894.txt  1778867778_1528514457_ad63a9c2.txt  (+31 more)
config/behaviors/: acid.toml  ai.toml  anger.toml  ball.toml  banish.toml  breadcrumbs.toml  clicker.toml  debugoose.toml  drag.toml  goose_manager.toml  hats.toml  health.toml  honcker.toml  jail.toml  nametag.toml  pomodoro.toml  portal.toml  rainbow.toml
config/themes/: canadian.toml  default.toml  my_theme.toml
docs/: PLAN.md  RENDERING_BUGS.md  RENDERING_CHANGELOG.md
include/: actor.h  actor_ball.h  actor_breadcrumb.h  actor_dropped_item.h  actor_flower.h  actor_jail.h  actor_leafpile.h  actor_portal.h  actor_toy.h  ai_mcp_bridge.h  ai_text_meme.h  app_actions.h  app_cli.h  assets.h  behavior.h  behavior_api.h  behavior_element_window.h  behavior_manager.h  behavior_registry.h  behavior_state.h  cg_renderer.h  command_socket.h  config.h  config_gui.h  config_gui_helpers.h  coordinate_system.h  cursor_backend.h  cursor_io.h  effect_registration.h  effect_window.h  event_bus.h  foundation_llm.h  goose.h  goose_debug.h  goose_drawing.h  goose_math.h  hotkey.h  item_drag_controller.h  item_renderer.h  item_window.h  (+12 more)
include/linux/: cairo_renderer.h  hyprland.h  ram_tracker.h  ui.h  wlroots_backend.h  x11_backend.h
references/mods/: Clicker.decompiled.cs  Clicker_Class1.cs  GooseJail_ModMain.cs  OnePunchGoose_ModMain.cs
scripts/: check_panel_widths.sh  create_bundle.sh  verify_ci.sh
src/common/: actor.cpp  actor_ball.mm  actor_breadcrumb.mm  actor_dropped_item.mm  actor_flower.mm  actor_jail.mm  actor_leafpile.mm  actor_portal.mm  actor_toy.mm  ai_mcp_bridge.cpp  app_actions.cpp  app_cli.cpp  behavior.cpp  config.cpp  config_helpers.cpp  config_helpers.h  config_load.cpp  config_registry.cpp  config_registry.h  config_registry_ai.cpp  config_registry_behaviors.cpp  config_registry_general.cpp  config_registry_generated.cpp  config_registry_render.cpp  config_save.cpp  cursor_backend.cpp  event_bus.cpp  goose.cpp  goose_behaviors.cpp  goose_behaviors.h  goose_behaviors_fetch.cpp  goose_behaviors_interact.cpp  goose_behaviors_internal.cpp  goose_behaviors_wander.cpp  goose_debug.cpp  goose_drawing.mm  goose_forces.cpp  goose_physics.cpp  hotkey.cpp  item_renderer.mm  (+7 more)
tests/: check_img.py  config.ini  output_test2.toml  test_ct.m  test_ct_bin  test_ct_color.m  test_ct_color_bin  test_framework.h  test_goose_behavior.cpp  test_goose_behaviors.cpp  test_goose_physics.cpp  test_image.m  test_img_bin  test_layer.m  test_layer_bin  test_main.cpp  test_render  test_render.m  test_render.py  test_render_bin  test_soak.cpp  toml_test  toml_test.cpp
tests/common/: presence_stub.cpp  test_ai_bridge.cpp  test_ai_routing.cpp  test_ai_text_meme.cpp  test_ai_tokens.cpp  test_behavior.cpp  test_behavior_ai.mm  test_behavior_ball.cpp  test_behavior_breadcrumbs.cpp  test_behavior_hats.cpp  test_behavior_helpers.cpp  test_behavior_interaction.cpp  test_behavior_manager.cpp  test_behavior_registry.cpp  test_behavior_sim.cpp  test_behavior_states.cpp  test_behavior_typed.cpp  test_behaviors_control.cpp  test_behaviors_fun.cpp  test_behaviors_pomodoro_portal.cpp  test_behaviors_registry_ai.cpp  test_behaviors_visual.cpp  test_config.cpp  test_config_get_set.cpp  test_config_gui_rendering.mm  test_config_load_save.cpp  test_config_registry.cpp  test_config_toggles.cpp  test_cursor_backend.cpp  test_dropped_item_hit.cpp  test_event_bus.cpp  test_footprint_registration.cpp  test_gui_config.mm  test_hotkey.cpp  test_items.cpp  test_jail_state.cpp  test_leafpile_scaling.cpp  test_local_llm.cpp  test_math.cpp  test_mcp_config.cpp  (+6 more)
tools/: config_schema.yaml  eval_goose_ai.py  extract_pngs.py  generate_config.py  research_osaurus.py  research_osaurus_focused.py
tools/Extractor/: Extractor.csproj.lscache
tools/profiling/: .gitignore  README.md  profile_cpu.sh  profile_memory.sh  quick_profile.sh  (+1 more)
(+354 files in other folders)
